News UAT/force-app/main/default/objects/Event_Details__c/Event_Details__c.object-meta.xml
<CustomObject>
    <description>NLM custom object. 

MD relationship with Opportunity.</description>
    <label>Event Details</label>
    <nameField>
        <displayFormat>ED-{0000}</displayFormat>
        <label>Event Details ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>