News UAT/force-app/main/default/objects/Event_Details__c/fields/Additional_Client_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Additional_Client_Expectations__c</fullName>
    <label>Additional Client Expectations</label>
    <type>TextArea</type>
</CustomField>