News UAT/force-app/main/default/objects/Event_Details__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Event Details</relationshipLabel>
    <relationshipName>Event_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>