News UAT/force-app/main/default/objects/Event_Details__c/fields/Consumer_or_Industry_Event__c.field-meta.xml
<CustomField>
    <fullName>Consumer_or_Industry_Event__c</fullName>
    <label>Consumer or Industry event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consumer event</fullName>
            </value>
            <value>
                <fullName>Industry event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>