News UAT/force-app/main/default/objects/Event_Details__c/fields/Event_Format__c.field-meta.xml
<CustomField>
    <fullName>Event_Format__c</fullName>
    <inlineHelpText>e.g. cocktail function, sit down dinner etc.</inlineHelpText>
    <label>Event Format</label>
    <type>TextArea</type>
</CustomField>