News UAT/force-app/main/default/objects/Event_Details__c/fields/Pax__c.field-meta.xml
<CustomField>
    <fullName>Pax__c</fullName>
    <inlineHelpText>Total number of people?</inlineHelpText>
    <label>Number of attendees</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>