News UAT/force-app/main/default/objects/Event_Details__c/fields/Production_mandatories__c.field-meta.xml
<CustomField>
    <fullName>Production_mandatories__c</fullName>
    <inlineHelpText>e.g. logo inclusion, keynote speaker, presentation, stage, etc.</inlineHelpText>
    <label>Production mandatories</label>
    <type>TextArea</type>
</CustomField>