News UAT/force-app/main/default/objects/Event_Details__c/fields/Social_Coverage_Proposed__c.field-meta.xml
<CustomField>
    <fullName>Social_Coverage_Proposed__c</fullName>
    <label>Social Coverage Proposed</label>
    <type>TextArea</type>
</CustomField>