News UAT/force-app/main/default/objects/Event_Details__c/fields/Talent__c.field-meta.xml
<CustomField>
    <fullName>Talent__c</fullName>
    <label>Talent</label>
    <type>TextArea</type>
</CustomField>