News UAT/force-app/main/default/objects/Event_Details__c/fields/Ticketed__c.field-meta.xml
<CustomField>
    <fullName>Ticketed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ticketed</label>
    <type>Checkbox</type>
</CustomField>